--- a/styles/ticket.css
+++ b/styles/ticket.css
@@ -3,15 +3,96 @@
     opacity: 40%;
 }
 
-.ticket {
-    display: flex;
-}
-
-.ticket__titulo {
-    padding: 2%;
-    width: 55%;
+.titulo {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    width: 65%;
+    padding: 3% 0%;
     font-size: 2rem;
     font-weight: 700;
     color: var(--cor-secundaria);
     font-family: var(--fonte-secundaria);
+}
+
+.ticket {
+    margin-left: auto;
+    margin-right: auto; 
+    margin-bottom: 3%;
+    padding: 1%;
+    width: 40%;
+    background: var(--cor-fundo);
+    box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.15);
+}
+
+.ticket__simbolos {
+    display: flex;
+    justify-content: space-around;
+    gap: 580px;
+    width: 100%;
+    padding-bottom: 3%;
+}
+
+
+
+.ticket__conteudo {
+    display: flex;
+    justify-content: start;
+    width: 100%;
+    gap: 48px;
+}
+
+.qrcode {
+    width: 25%;
+}
+
+.ticket__conteudo__informacoes {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 35%
+}
+
+.ticket__conteudo__informacoes__titulo {
+    color: var(--cor-secundaria);
+    font-size: 2rem;
+    font-weight: 700;
+    font-family: var(--fonte-secundaria);
+}
+
+.ticket__conteudo__informacoes__subtitulo {
+    color: var(--cor-secundaria);
+    font-size: 1.25rem;
+    font-weight: 500;
+    font-family: var(--fonte-secundaria);
+}
+
+@media (max-width: 768px){
+    .titulo{
+        padding: 7%;
+    }
+
+    .ticket {
+        width: 70%;
+        padding: 3% 0%;
+    }
+
+    .ticket__simbolos {
+        gap: 350px;
+        padding-bottom: 8%;
+    }
+
+    .ticket__conteudo{
+        flex-direction: column;
+        align-items: center;
+        gap: 32px;
+    }
+
+    .qrcode {
+        width: 40%;
+    }
+
+    .ticket__conteudo__informacoes__subtitulo {
+        text-align: center;
+    }
 }
