--- a/styles/ingressos.css
+++ b/styles/ingressos.css
@@ -46,6 +46,7 @@
 .formulario__flex {
     display: flex;
     justify-content: center;
+    align-items: baseline;
     gap: 34px;
     width: 100%;
     padding-bottom: 2%;
