--- a/styles/ingressos.css
+++ b/styles/ingressos.css
@@ -69,9 +69,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
     gap: 16px;
     box-shadow: 4px 4px var(--cor-sombra);
-    width: 20%;
+    width: 40%;
     height: 56px;
     font-size: 1.25rem;
     font-weight: 700;
@@ -83,6 +84,13 @@
 
 .avancar:hover {
     background-color: var(--cor-hover);
+}
+
+.avancar-ancora {
+    text-decoration: none;
+    width: 35%;
+    display: flex;
+    justify-content: center;
 }
 
 .apresentacao__secao::before {
